Repaired logo error on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .nav-logo {
-    width: 100%;
+    width: 33px;
 }
 
 .navbar-item {
